Prevent image distortion on resizing

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 html{
     display: flex;
     justify-content: center;
+    align-items: center;
     background-color: var(--background-color);
     height: 100vh;
     
@@ -20,7 +21,7 @@ h3{
 
 .main-content-container{
     background-color: beige;
-    width: 1300px;
+    width: min(1300px, 100%);
     height: 100vh;
     display: flex;
     flex: 1;
@@ -31,7 +32,7 @@ h3{
     width: 500px;
     height: 100%;
     background-image: url(./images/flavors.jpg);
-    background-size: var(--main-container-width) 100vh ;
+    background-size: var(--main-container-width) 941px;
     background-repeat: no-repeat;
 }
 
@@ -39,7 +40,7 @@ h3{
     position: relative;
     top: 140px;
     width: 100%;
-    height: 20vh;
+    min-height: 200px;
     background: var(--logo-background);
     display: flex;
     justify-content: center;
@@ -60,7 +61,8 @@ h3{
 }
 
 .right-container{
-    width: clamp(50%, 800px, 100%);
+    position: relative;
+    width: max(50%, 800px);
     display: flex;
     flex-direction: column;
 }
@@ -113,7 +115,7 @@ form{
     padding-bottom: 50px;
 }
 
-@media screen and (max-width: 500px){
+@media screen and (max-width: 600px){
     .left-container{
         width: 0px;
     }
@@ -121,7 +123,7 @@ form{
         width: 100%;
     }
     .main-content-container{
-        width: 500px;
+        width: 100%;
     }
     .logo-container{
         display: none;
